# proxyrust

./: .gitignore  Cargo.toml  README.md
.ai/plans/: proxyrust-master-plan.md
.ai/plans/phases/: phase-0-foundation-and-plugin-host.md  phase-1-source-center-and-ingestion.md  phase-2-probing-scoring-and-rule-engine.md  phase-3-bindings-share-and-runtime.md  phase-4-distributed-workers-and-scheduling.md  phase-5-ops-observability-and-productized-ui.md
apps/control-plane/: Cargo.toml
apps/control-plane/src/: main.rs
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/platform-core/: Cargo.toml
crates/platform-core/src/: lib.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: lib.rs
