[workspace]
resolver = "2"
members = [
    "apps/control-plane",
    "apps/worker",
    "crates/platform-core",
    "crates/plugin-host",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ProxyRust"]

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

