[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
platform-core = { path = "../../crates/platform-core" }
plugin-host = { path = "../../crates/plugin-host" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

